syntax = "proto3";

import "google/protobuf/timestamp.proto";

package userGrpc;

message ResInfo {
    int32 code = 1;
    string msg = 2;
}

message User {
    int32 Id = 1;
    int64 Uid = 2;
    string NickName = 3;
    string Password = 4;
    string Telephone = 5;
    string Email = 6;
    string ProfileImages = 7;
    int64 FollowsCount = 8;
    int64 FriendsCount = 9;
    google.protobuf.Timestamp CreateTime = 10;
    google.protobuf.Timestamp UpdateTime = 11;
}

message MultiUsers {
    repeated User UserInfo = 1;
}

message Uid {
    int64 Uid = 1;
}

message Uids {
    repeated Uid singleUid = 1;
}

message UserRes {
    ResInfo res = 1;
    User info = 2;
}

message MultiUsersRes {
    ResInfo res = 1;
    MultiUsers info = 2;
}

service MblogUser {
    rpc Create(User) returns (UserRes) {}
    rpc GetByUid(Uid) returns (UserRes) {}
    rpc GetByNicknameAndPassword(User) returns (UserRes) {}
    rpc GetMultiByUids(Uids) returns (MultiUsersRes) {}
}